tests/baselines/reference/arrowFunctionWithObjectLiteralBody3(strict=true).errors.txt
arrowFunctionWithObjectLiteralBody3.ts(1,9): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== arrowFunctionWithObjectLiteralBody3.ts (1 errors) ====
    var v = a => <any>{}
            ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.